Fix display of large questions on small screens
Allow flexbox to scale automatically rather than trying to predict the svg area will always be 4 times the size

--- a/www/agreeOrDisagree.css
+++ b/www/agreeOrDisagree.css
@@ -18,7 +18,7 @@ body {
 /* Lay out the labels in the UI container */
 
 #d3-container {
-	flex: 4 300px;
+	flex: 1 300px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
